# objekt-dagster

objekt-dagster/: README.md  pyproject.toml  requirements.txt
objekt-dagster/.dg/: telemetry.yaml
objekt-dagster/src/objekt_dagster/defs/: assets.py  resources.py
