[project]
name = "objekt_dagster"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.13",
    "objekt-api",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "objekt_dagster"
registry_modules = [
    "objekt_dagster.components.*",
]

[tool.uv.sources]
objekt-api = { git = "https://github.com/devinthai/objekt_api" }


