[project]
name = "objekt_dagster"
requires-python = ">=3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.12.13",
    "objekt-api",
    "objekt-db",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "objekt_dagster"
registry_modules = [
    "objekt_dagster.components.*",
]

[tool.uv.sources]
objekt-api = { git = "https://github.com/devinthai/objekt_api" }
objekt-db = { git = "https://github.com/devinthai/objekt-db" }


